更新脚本,增加申威服务器支持.